--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ addons:
       - blender
 sudo: false
 install:
+  - pip install codecov
   - BLENDER_VERSION="2.80"
   - BLENDER_VERSION_SUFFIX=""
   - BLENDER_ARCHIVE="blender-${BLENDER_VERSION}${BLENDER_VERSION_SUFFIX}-linux-glibc217-x86_64"
@@ -18,4 +19,7 @@ install:
   - cd ..
   - ln -s ${PWD}/io_mesh_w3d ${PWD}/tmp/blender/${BLENDER_VERSION}/scripts/addons/io_mesh_w3d
   - ln -s ${PWD}/tests ${PWD}/tmp/blender/${BLENDER_VERSION}/scripts/addons/tests
-script: python tests.py --blender ./tmp/blender/blender
+script: coverage run tests.py --blender ./tmp/blender/blender
+
+after_success:
+  - codecov
