Improve test setup

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,10 @@ install:
   - cd ..
   - ln -s ${PWD}/io_mesh_w3d ${PWD}/tmp/blender/${BLENDER_VERSION}/scripts/addons/io_mesh_w3d
   - ln -s ${PWD}/tests ${PWD}/tmp/blender/${BLENDER_VERSION}/scripts/addons/tests
+  - wget https://files.pythonhosted.org/packages/85/d5/818d0e603685c4a613d56f065a721013e942088047ff1027a632948bdae6/coverage-4.5.4.tar.gz#md5=c33cab2aed8780aac32880cb6c7616b7
+  - tar zxf coverage-4.5.4.tar.gz
+  - mv coverage-4.5.4/coverage "${PWD}/tmp/blender/${BLENDER_VERSION}/python/lib/"
+  - rm -rf coverage-4.5.4
 script: coverage run tests.py --blender ./tmp/blender/blender
 
 after_success:
