--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -1,5 +1,8 @@
 name: Format python code
-on: push
+on: 
+  pull_request:
+    branches: 
+      - master
 jobs:
   autopep8:
     runs-on: ubuntu-latest
