--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
       BLENDER_ARCHIVE: "blender-$matrix.BLENDER_VERSION$BLENDER_VERSION_SUFFIX-linux-glibc217-x86_64"
     
     steps:
-      - id: install blender
+      - id: installBlender
         run: |
           mkdir tmp && cd tmp
           wget https://ftp.halifax.rwth-aachen.de/blender/release/Blender$matrix.BLENDER_VERSION/$BLENDER_ARCHIVE.tar.bz2
