--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,19 +17,20 @@ jobs:
 
     env:
       BLENDER_VERSION_SUFFIX: "" 
-      BLENDER_ARCHIVE: "blender-$matrix.BLENDER_VERSION$BLENDER_VERSION_SUFFIX-linux-glibc217-x86_64"
+      BLENDER_ARCHIVE: "blender-${{ matrix.BLENDER_VERSION }} ${{ BLENDER_VERSION_SUFFIX }}-linux-glibc217-x86_64"
     
     steps:
       - id: installBlender
         run: |
           echo "start"
+          echo ${{ BLENDER_VERSION_SUFFIX }} ${{ matrix.BLENDER_VERSION }} &{{ BLENDER_ARCHIVE }}
           mkdir tmp && cd tmp
-          wget https://ftp.halifax.rwth-aachen.de/blender/release/Blender$matrix.BLENDER_VERSION/$BLENDER_ARCHIVE.tar.bz2
+          wget https://ftp.halifax.rwth-aachen.de/blender/release/Blender${{ matrix.BLENDER_VERSION }}/${{ BLENDER_ARCHIVE }}.tar.bz2
           echo "2"
           tar jxf $BLENDER_ARCHIVE.tar.bz2
           mv $BLENDER_ARCHIVE blender
           rm $BLENDER_ARCHIVE.tar.bz2
           echo "3"
           cd ..
-          ln -s ${PWD}/io_mesh_w3d ${PWD}/tmp/blender/$matrix.BLENDER_VERSION/scripts/addons/io_mesh_w3d
+          ln -s ${PWD}/io_mesh_w3d ${PWD}/tmp/blender/${{ matrix.BLENDER_VERSION }}/scripts/addons/io_mesh_w3d
           echo "4"
