--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           echo "start"
           mkdir tmp && cd tmp
-          wget https://ftp.halifax.rwth-aachen.de/blender/release/Blender${{ matrix.BLENDER_VERSION }}/${{ BLENDER_ARCHIVE }}.tar.bz2
+          wget https://ftp.halifax.rwth-aachen.de/blender/release/Blender${{ matrix.BLENDER_VERSION }}/$BLENDER_ARCHIVE.tar.bz2
           echo "2"
           tar jxf $BLENDER_ARCHIVE.tar.bz2
           mv $BLENDER_ARCHIVE blender
