--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ env:
     matrix:
         - BLENDER_VERSION="2.80"
         - BLENDER_VERSION="2.81"
+        - BLENDER_VERSION="2.82"
+        - BLENDER_VERSION="2.83"
 
 install:
   - pip install codecov
