--- a/.travis.yml
+++ b/.travis.yml
@@ -20,10 +20,9 @@ jobs:
 
 install:
   - pip install codecov
-  - BLENDER_VERSION_SUFFIX=""
-  - BLENDER_ARCHIVE="blender-${BLENDER_VERSION}${BLENDER_VERSION_SUFFIX}-${BLENDER_ARCHIVE_NAME}"
+  - BLENDER_ARCHIVE="blender-${BLENDER_VERSION}-${BLENDER_ARCHIVE_NAME}"
   - mkdir tmp && cd tmp
-  - wget https://ftp.halifax.rwth-aachen.de/blender/release/Blender${BLENDER_VERSION}/${BLENDER_ARCHIVE}${BLENDER_ARCHIVE_EXTENSION}
+  - wget https://download.blender.org/release/Blender${BLENDER_VERSION}/${BLENDER_ARCHIVE}${BLENDER_ARCHIVE_EXTENSION}
   - tar jxf ${BLENDER_ARCHIVE}.${BLENDER_ARCHIVE_EXTENSION}
   - mv ${BLENDER_ARCHIVE} blender
   - rm ${BLENDER_ARCHIVE}.${BLENDER_ARCHIVE_EXTENSION}
