--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ install:
   - pip install codecov
   - BLENDER_ARCHIVE="blender-${BLENDER_VERSION}-${BLENDER_ARCHIVE_NAME}"
   - mkdir tmp && cd tmp
-  - wget https://download.blender.org/release/Blender${BLENDER_VERSION}/${BLENDER_ARCHIVE}${BLENDER_ARCHIVE_EXTENSION}
+  - wget "https://download.blender.org/release/Blender${BLENDER_VERSION}/${BLENDER_ARCHIVE}${BLENDER_ARCHIVE_EXTENSION}"
   - tar jxf ${BLENDER_ARCHIVE}.${BLENDER_ARCHIVE_EXTENSION}
   - mv ${BLENDER_ARCHIVE} blender
   - rm ${BLENDER_ARCHIVE}.${BLENDER_ARCHIVE_EXTENSION}
