--- a/.travis.yml
+++ b/.travis.yml
@@ -7,22 +7,29 @@ jobs:
     include:
         - BLENDER_VERSION: "2.80"
           BLENDER_ARCHIVE_NAME: "linux-glibc217-x86_64"
+          BLENDER_ARCHIVE: "blender-${BLENDER_VERSION}-${BLENDER_ARCHIVE_NAME}"
           BLENDER_ARCHIVE_EXTENSION: ".tar.bz2"
+          FILE: https://download.blender.org/release/Blender${BLENDER_VERSION}/${BLENDER_ARCHIVE}.tar.bz2
         - BLENDER_VERSION: "2.81"
           BLENDER_ARCHIVE_NAME: "linux-glibc217-x86_64"
+          BLENDER_ARCHIVE: "blender-${BLENDER_VERSION}-${BLENDER_ARCHIVE_NAME}"
           BLENDER_ARCHIVE_EXTENSION: ".tar.bz2"
+          FILE: https://download.blender.org/release/Blender${BLENDER_VERSION}/${BLENDER_ARCHIVE}.tar.bz2
         - BLENDER_VERSION: "2.82"
           BLENDER_ARCHIVE_NAME: "linux64"
+          BLENDER_ARCHIVE: "blender-${BLENDER_VERSION}-${BLENDER_ARCHIVE_NAME}"
           BLENDER_ARCHIVE_EXTENSION: ".tar.xz"
+          FILE: https://download.blender.org/release/Blender${BLENDER_VERSION}/${BLENDER_ARCHIVE}.tar.xz
         - BLENDER_VERSION: "2.83"
           BLENDER_ARCHIVE_NAME: "linux64"
+          BLENDER_ARCHIVE: "blender-${BLENDER_VERSION}-${BLENDER_ARCHIVE_NAME}"
           BLENDER_ARCHIVE_EXTENSION: ".tar.xz"
+          FILE: https://download.blender.org/release/Blender${BLENDER_VERSION}/${BLENDER_ARCHIVE}.tar.xz
 
 install:
   - pip install codecov
-  - BLENDER_ARCHIVE="blender-${BLENDER_VERSION}-${BLENDER_ARCHIVE_NAME}"
   - mkdir tmp && cd tmp
-  - wget https://download.blender.org/release/Blender$BLENDER_VERSION/$BLENDER_ARCHIVE$BLENDER_ARCHIVE_EXTENSION
+  - wget ${FILE}
   - tar jxf ${BLENDER_ARCHIVE}.${BLENDER_ARCHIVE_EXTENSION}
   - mv ${BLENDER_ARCHIVE} blender
   - rm ${BLENDER_ARCHIVE}.${BLENDER_ARCHIVE_EXTENSION}
