--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ jobs:
           BLENDER_ARCHIVE_EXTENSION: ".tar.xz"
           BLENDER_FILE: https://download.blender.org/release/Blender2.83/blender-2.83-linux64.tar.xz
 
-install:q
+install:
   - pip install codecov
   - mkdir tmp && cd tmp
   - wget "$BLENDER_FILE"
