--- a/.travis.yml
+++ b/.travis.yml
@@ -3,31 +3,20 @@ python:
   - "3.7"
 sudo: false
 
-jobs:
-    include:
-        - BLENDER_VERSION: "2.80"
-          BLENDER_ARCHIVE_NAME: "linux-glibc217-x86_64"
-          BLENDER_ARCHIVE_EXTENSION: ".tar.bz2"
-        - BLENDER_VERSION: "2.81"
-          BLENDER_ARCHIVE_NAME: "linux-glibc217-x86_64"
-          BLENDER_ARCHIVE_EXTENSION: ".tar.bz2"
-        - BLENDER_VERSION: "2.82"
-          BLENDER_ARCHIVE_NAME: "linux64"
-          BLENDER_ARCHIVE_EXTENSION: ".tar.xz"
-          BLENDER_FILE: https://download.blender.org/release/Blender2.82/blender-2.82-linux64.tar.xz
-        - BLENDER_VERSION: "2.83"
-          BLENDER_ARCHIVE_NAME: "linux64"
-          BLENDER_ARCHIVE_EXTENSION: ".tar.xz"
-          BLENDER_FILE: https://download.blender.org/release/Blender2.83/blender-2.83-linux64.tar.xz
+env:
+    matrix:
+        - BLENDER_VERSION="2.80"
+        - BLENDER_VERSION="2.81"
 
 install:
   - pip install codecov
+  - BLENDER_VERSION_SUFFIX=""
+  - BLENDER_ARCHIVE="blender-${BLENDER_VERSION}${BLENDER_VERSION_SUFFIX}-linux-glibc217-x86_64"
   - mkdir tmp && cd tmp
-  - BLENDER_ARCHIVE="blender-${BLENDER_VERSION}-linux-glibc217-x86_64"
   - wget https://ftp.halifax.rwth-aachen.de/blender/release/Blender${BLENDER_VERSION}/${BLENDER_ARCHIVE}.tar.bz2
-  - tar jxf ${BLENDER_ARCHIVE}.${BLENDER_ARCHIVE_EXTENSION}
+  - tar jxf ${BLENDER_ARCHIVE}.tar.bz2
   - mv ${BLENDER_ARCHIVE} blender
-  - rm ${BLENDER_ARCHIVE}.${BLENDER_ARCHIVE_EXTENSION}
+  - rm ${BLENDER_ARCHIVE}.tar.bz2
   - cd ..
   - ln -s ${PWD}/io_mesh_w3d ${PWD}/tmp/blender/${BLENDER_VERSION}/scripts/addons/io_mesh_w3d
   - wget https://files.pythonhosted.org/packages/85/d5/818d0e603685c4a613d56f065a721013e942088047ff1027a632948bdae6/coverage-4.5.4.tar.gz#md5=c33cab2aed8780aac32880cb6c7616b7
