--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,21 @@ python:
   - "3.7"
 sudo: false
 
+jobs:
+    include:
+        - BLENDER_VERSION: "2.80"
+          BLENDER_ARCHIVE_NAME: "linux-glibc217-x86_64"
+          BLENDER_ARCHIVE_EXTENSION: ".tar.bz2"
+        - BLENDER_VERSION: "2.81"
+          BLENDER_ARCHIVE_NAME: "linux-glibc217-x86_64"
+          BLENDER_ARCHIVE_EXTENSION: ".tar.bz2"
+        - BLENDER_VERSION: "2.82"
+          BLENDER_ARCHIVE_NAME: "linux64"
+          BLENDER_ARCHIVE_EXTENSION: ".tar.xz"
+        - BLENDER_VERSION: "2.83"
+          BLENDER_ARCHIVE_NAME: "linux64"
+          BLENDER_ARCHIVE_EXTENSION: ".tar.xz"
+
 env:
     matrix:
         - BLENDER_VERSION="2.80"
@@ -10,10 +25,10 @@ env:
 
 install:
   - pip install codecov
-  - BLENDER_VERSION_SUFFIX=""
-  - BLENDER_ARCHIVE="blender-${BLENDER_VERSION}${BLENDER_VERSION_SUFFIX}-linux-glibc217-x86_64"
   - mkdir tmp && cd tmp
-  - wget https://ftp.halifax.rwth-aachen.de/blender/release/Blender${BLENDER_VERSION}/${BLENDER_ARCHIVE}.tar.bz2
+  - BLENDER_ARCHIVE="blender-${BLENDER_VERSION}-${BLENDER_ARCHIVE_NAME}"
+  - BLENDER_FILE="https://download.blender.org/release/Blender${BLENDER_VERSION}/${BLENDER_ARCHIVE}.${BLENDER_ARCHIVE_EXTENSION}"
+  - wget $BLENDER_FILE
   - tar jxf ${BLENDER_ARCHIVE}.tar.bz2
   - mv ${BLENDER_ARCHIVE} blender
   - rm ${BLENDER_ARCHIVE}.tar.bz2
