--- a/.travis.yml
+++ b/.travis.yml
@@ -3,20 +3,25 @@ python:
   - "3.7"
 sudo: false
 
+env:
+    - BLENDER_VERSION="2.80"
+    - BLENDER_ARCHIVE_NAME="linux-glibc217-x86_64"
+    - BLENDER_ARCHIVE_EXTENSION="tar.bz2"
+
 jobs:
     include:
-        - BLENDER_VERSION: 2.80
-          BLENDER_ARCHIVE_NAME: linux-glibc217-x86_64
-          BLENDER_ARCHIVE_EXTENSION: tar.bz2
-        - BLENDER_VERSION: 2.81
-          BLENDER_ARCHIVE_NAME: linux-glibc217-x86_64
-          BLENDER_ARCHIVE_EXTENSION: tar.bz2
-        - BLENDER_VERSION: 2.82
-          BLENDER_ARCHIVE_NAME: linux64
-          BLENDER_ARCHIVE_EXTENSION: tar.xz
-        - BLENDER_VERSION: 2.83
-          BLENDER_ARCHIVE_NAME: linux64
-          BLENDER_ARCHIVE_EXTENSION: tar.xz
+        - env: BLENDER_VERSION="2.80"
+          env: BLENDER_ARCHIVE_NAME="linux-glibc217-x86_64"
+          env: BLENDER_ARCHIVE_EXTENSION="tar.bz2"
+        - env: BLENDER_VERSION="2.81"
+          env: BLENDER_ARCHIVE_NAME="linux-glibc217-x86_64"
+          env: BLENDER_ARCHIVE_EXTENSION="tar.bz2"
+        - env: BLENDER_VERSION="2.82"
+          env: BLENDER_ARCHIVE_NAME="linux64"
+          env: BLENDER_ARCHIVE_EXTENSION="tar.xz"
+        - env: BLENDER_VERSION="2.83"
+          env: BLENDER_ARCHIVE_NAME="linux64"
+          env: BLENDER_ARCHIVE_EXTENSION="tar.xz"
 
 install:
   - pip install codecov
