--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,9 @@ sudo: false
 
 env:
     - BLENDER_VERSION="2.80" BLENDER_ARCHIVE_NAME="linux-glibc217-x86_64" BLENDER_ARCHIVE_EXTENSION="tar.bz2"
-
+    - BLENDER_VERSION="2.81" BLENDER_ARCHIVE_NAME="linux-glibc217-x86_64" BLENDER_ARCHIVE_EXTENSION="tar.bz2"
+    - BLENDER_VERSION="2.82" BLENDER_ARCHIVE_NAME="linux64" BLENDER_ARCHIVE_EXTENSION="tar.xz"
+    - BLENDER_VERSION="2.82" BLENDER_ARCHIVE_NAME="linux64" BLENDER_ARCHIVE_EXTENSION="tar.xz"
 
 install:
   - pip install codecov
