--- a/.travis.yml
+++ b/.travis.yml
@@ -4,15 +4,15 @@ python:
 sudo: false
 
 env:
-    - BLENDER_VERSION="2.80" BLENDER_ARCHIVE_NAME="linux-glibc217-x86_64" BLENDER_ARCHIVE_EXTENSION="tar.bz2"
-    - BLENDER_VERSION="2.81" BLENDER_ARCHIVE_NAME="linux-glibc217-x86_64" BLENDER_ARCHIVE_EXTENSION="tar.bz2"
-    - BLENDER_VERSION="2.82" BLENDER_ARCHIVE_NAME="linux64" BLENDER_ARCHIVE_EXTENSION="tar.xz"
-    - BLENDER_VERSION="2.83" BLENDER_ARCHIVE_NAME="linux64" BLENDER_ARCHIVE_EXTENSION="tar.xz"
+    - BLENDER_VERSION="2.80" BLENDER_VERSION_SUFFIX="" BLENDER_ARCHIVE_NAME="linux-glibc217-x86_64" BLENDER_ARCHIVE_EXTENSION="tar.bz2"
+    - BLENDER_VERSION="2.81" BLENDER_VERSION_SUFFIX="" BLENDER_ARCHIVE_NAME="linux-glibc217-x86_64" BLENDER_ARCHIVE_EXTENSION="tar.bz2"
+    - BLENDER_VERSION="2.82" BLENDER_VERSION_SUFFIX="" BLENDER_ARCHIVE_NAME="linux64" BLENDER_ARCHIVE_EXTENSION="tar.xz"
+    - BLENDER_VERSION="2.83" BLENDER_VERSION_SUFFIX=".0" BLENDER_ARCHIVE_NAME="linux64" BLENDER_ARCHIVE_EXTENSION="tar.xz"
 
 install:
   - pip install codecov
   - mkdir tmp && cd tmp
-  - BLENDER_ARCHIVE="blender-${BLENDER_VERSION}-${BLENDER_ARCHIVE_NAME}"
+  - BLENDER_ARCHIVE="blender-${BLENDER_VERSION}${BLENDER_VERSION_SUFFIX}-${BLENDER_ARCHIVE_NAME}"
   - BLENDER_FILE="https://download.blender.org/release/Blender${BLENDER_VERSION}/${BLENDER_ARCHIVE}.${BLENDER_ARCHIVE_EXTENSION}"
   - wget ${BLENDER_FILE}
   - tar jxf ${BLENDER_ARCHIVE}.${BLENDER_ARCHIVE_EXTENSION}
