install xz utils

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,13 @@ python:
 sudo: false
 
 env:
-    - BLENDER_VERSION="2.80" BLENDER_VERSION_SUFFIX="" BLENDER_ARCHIVE_NAME="linux-glibc217-x86_64" BLENDER_ARCHIVE_EXTENSION="tar.bz2"
-    - BLENDER_VERSION="2.81" BLENDER_VERSION_SUFFIX="" BLENDER_ARCHIVE_NAME="linux-glibc217-x86_64" BLENDER_ARCHIVE_EXTENSION="tar.bz2"
-    - BLENDER_VERSION="2.82" BLENDER_VERSION_SUFFIX="" BLENDER_ARCHIVE_NAME="linux64" BLENDER_ARCHIVE_EXTENSION="tar.xz"
-    - BLENDER_VERSION="2.83" BLENDER_VERSION_SUFFIX=".0" BLENDER_ARCHIVE_NAME="linux64" BLENDER_ARCHIVE_EXTENSION="tar.xz"
+    - BLENDER_VERSION="2.80" TAR="jxf" BLENDER_VERSION_SUFFIX="" BLENDER_ARCHIVE_NAME="linux-glibc217-x86_64" BLENDER_ARCHIVE_EXTENSION="tar.bz2"
+    - BLENDER_VERSION="2.81" TAR="jxf" BLENDER_VERSION_SUFFIX="" BLENDER_ARCHIVE_NAME="linux-glibc217-x86_64" BLENDER_ARCHIVE_EXTENSION="tar.bz2"
+    - BLENDER_VERSION="2.82" TAR="jxf" BLENDER_VERSION_SUFFIX="" BLENDER_ARCHIVE_NAME="linux64" BLENDER_ARCHIVE_EXTENSION="tar.xz"
+    - BLENDER_VERSION="2.83" TAR="jxf" BLENDER_VERSION_SUFFIX=".0" BLENDER_ARCHIVE_NAME="linux64" BLENDER_ARCHIVE_EXTENSION="tar.xz"
 
 install:
+  - sudo apt install xz-utils
   - pip install codecov
   - mkdir tmp && cd tmp
   - BLENDER_ARCHIVE="blender-${BLENDER_VERSION}${BLENDER_VERSION_SUFFIX}-${BLENDER_ARCHIVE_NAME}"
