--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ sudo: false
 env:
     - BLENDER_VERSION="2.80" TAR="jxf" BLENDER_VERSION_SUFFIX="" BLENDER_ARCHIVE_NAME="linux-glibc217-x86_64" BLENDER_ARCHIVE_EXTENSION="tar.bz2"
     - BLENDER_VERSION="2.81" TAR="jxf" BLENDER_VERSION_SUFFIX="" BLENDER_ARCHIVE_NAME="linux-glibc217-x86_64" BLENDER_ARCHIVE_EXTENSION="tar.bz2"
-    - BLENDER_VERSION="2.82" TAR="jxf" BLENDER_VERSION_SUFFIX="" BLENDER_ARCHIVE_NAME="linux64" BLENDER_ARCHIVE_EXTENSION="tar.xz"
-    - BLENDER_VERSION="2.83" TAR="jxf" BLENDER_VERSION_SUFFIX=".0" BLENDER_ARCHIVE_NAME="linux64" BLENDER_ARCHIVE_EXTENSION="tar.xz"
+    - BLENDER_VERSION="2.82" TAR="xf" BLENDER_VERSION_SUFFIX="" BLENDER_ARCHIVE_NAME="linux64" BLENDER_ARCHIVE_EXTENSION="tar.xz"
+    - BLENDER_VERSION="2.83" TAR="xf" BLENDER_VERSION_SUFFIX=".0" BLENDER_ARCHIVE_NAME="linux64" BLENDER_ARCHIVE_EXTENSION="tar.xz"
 
 install:
   - sudo apt install xz-utils
@@ -16,7 +16,7 @@ install:
   - BLENDER_ARCHIVE="blender-${BLENDER_VERSION}${BLENDER_VERSION_SUFFIX}-${BLENDER_ARCHIVE_NAME}"
   - BLENDER_FILE="https://download.blender.org/release/Blender${BLENDER_VERSION}/${BLENDER_ARCHIVE}.${BLENDER_ARCHIVE_EXTENSION}"
   - wget ${BLENDER_FILE}
-  - tar jxf ${BLENDER_ARCHIVE}.${BLENDER_ARCHIVE_EXTENSION}
+  - tar ${TAR} ${BLENDER_ARCHIVE}.${BLENDER_ARCHIVE_EXTENSION}
   - mv ${BLENDER_ARCHIVE} blender
   - rm ${BLENDER_ARCHIVE}.${BLENDER_ARCHIVE_EXTENSION}
   - cd ..
