--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
   - pip install codecov
   - mkdir tmp && cd tmp
   - BLENDER_ARCHIVE="blender-${BLENDER_VERSION}${BLENDER_VERSION_SUFFIX}-${BLENDER_ARCHIVE_NAME}"
-  - BLENDER_FILE="https://download.blender.org/release/Blender${BLENDER_VERSION}/${BLENDER_ARCHIVE}.${BLENDER_ARCHIVE_EXTENSION}"
+  - BLENDER_FILE="http://ftp.halifax.rwth-aachen.de/blender/release/Blender${BLENDER_VERSION}/${BLENDER_ARCHIVE}.${BLENDER_ARCHIVE_EXTENSION}"
   - wget ${BLENDER_FILE}
   - tar ${TAR} ${BLENDER_ARCHIVE}.${BLENDER_ARCHIVE_EXTENSION}
   - mv ${BLENDER_ARCHIVE} blender
