--- a/.travis.yml
+++ b/.travis.yml
@@ -4,19 +4,21 @@ python:
 sudo: false
 
 env:
-    matrix:
-        - BLENDER_VERSION="2.80"
-        - BLENDER_VERSION="2.81"
+    - BLENDER_VERSION="2.80" TAR="jxf" BLENDER_VERSION_SUFFIX="" BLENDER_ARCHIVE_NAME="linux-glibc217-x86_64" BLENDER_ARCHIVE_EXTENSION="tar.bz2"
+    - BLENDER_VERSION="2.81" TAR="jxf" BLENDER_VERSION_SUFFIX="" BLENDER_ARCHIVE_NAME="linux-glibc217-x86_64" BLENDER_ARCHIVE_EXTENSION="tar.bz2"
+    - BLENDER_VERSION="2.82" TAR="xf" BLENDER_VERSION_SUFFIX="" BLENDER_ARCHIVE_NAME="linux64" BLENDER_ARCHIVE_EXTENSION="tar.xz"
+    - BLENDER_VERSION="2.83" TAR="xf" BLENDER_VERSION_SUFFIX=".0" BLENDER_ARCHIVE_NAME="linux64" BLENDER_ARCHIVE_EXTENSION="tar.xz"
 
 install:
+  - sudo apt install xz-utils
   - pip install codecov
-  - BLENDER_VERSION_SUFFIX=""
-  - BLENDER_ARCHIVE="blender-${BLENDER_VERSION}${BLENDER_VERSION_SUFFIX}-linux-glibc217-x86_64"
   - mkdir tmp && cd tmp
-  - wget https://ftp.halifax.rwth-aachen.de/blender/release/Blender${BLENDER_VERSION}/${BLENDER_ARCHIVE}.tar.bz2
-  - tar jxf ${BLENDER_ARCHIVE}.tar.bz2
+  - BLENDER_ARCHIVE="blender-${BLENDER_VERSION}${BLENDER_VERSION_SUFFIX}-${BLENDER_ARCHIVE_NAME}"
+  - BLENDER_FILE="http://ftp.halifax.rwth-aachen.de/blender/release/Blender${BLENDER_VERSION}/${BLENDER_ARCHIVE}.${BLENDER_ARCHIVE_EXTENSION}"
+  - wget ${BLENDER_FILE}
+  - tar ${TAR} ${BLENDER_ARCHIVE}.${BLENDER_ARCHIVE_EXTENSION}
   - mv ${BLENDER_ARCHIVE} blender
-  - rm ${BLENDER_ARCHIVE}.tar.bz2
+  - rm ${BLENDER_ARCHIVE}.${BLENDER_ARCHIVE_EXTENSION}
   - cd ..
   - ln -s ${PWD}/io_mesh_w3d ${PWD}/tmp/blender/${BLENDER_VERSION}/scripts/addons/io_mesh_w3d
   - wget https://files.pythonhosted.org/packages/85/d5/818d0e603685c4a613d56f065a721013e942088047ff1027a632948bdae6/coverage-4.5.4.tar.gz#md5=c33cab2aed8780aac32880cb6c7616b7
