--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,6 +56,7 @@ jobs:
 
     runs-on: [ ubuntu-latest ]
 
+    steps:
     - name: Bundle archive
       run: |
         zip -r io_mesh_w3d.zip io_mesh_w3d
