--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,8 @@ jobs:
             blender-version-suffix: '0'
           - blender-version: '2.91'
             blender-version-suffix: '2'
+          - blender-version: '2.92'
+            blender-version-suffix: '0'
 
     steps:
     - uses: actions/checkout@v2
