include submodules on checkout

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,7 @@ jobs:
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
+        submodules: 'true'
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
