--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
     steps:
     - name: Bundle archive
       run: |
-        zip -r io_mesh_w3d.zip io_mesh_w3d
+        zip -r io_mesh_w3d.zip io_mesh_w3d -x io_mesh_w3d/blender_addon_updater/.git
 
     - name: Create Release
       id: create_release
