--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,10 +37,10 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install codecov
         mkdir tmp && cd tmp
-        wget http://ftp.halifax.rwth-aachen.de/blender/release/Blender${{ matrix.blender-version }}/blender-${{ matrix.blender-version }}.${{ matrix.blender-version-suffix }}-linux64.tar.xz
-        tar xf blender-${{ matrix.blender-version }}.${{ matrix.blender-version-suffix }}-linux64.tar.xz
-        mv blender-${{ matrix.blender-version }}.${{ matrix.blender-version-suffix }}-linux64 blender
-        rm blender-${{ matrix.blender-version }}.${{ matrix.blender-version-suffix }}-linux64.tar.xz
+        wget http://ftp.halifax.rwth-aachen.de/blender/release/Blender${{ matrix.blender-version }}/blender-${{ matrix.blender-version }}.${{ matrix.blender-version-suffix }}-linux-x64.tar.xz
+        tar xf blender-${{ matrix.blender-version }}.${{ matrix.blender-version-suffix }}-linux-x64.tar.xz
+        mv blender-${{ matrix.blender-version }}.${{ matrix.blender-version-suffix }}-linux-x64 blender
+        rm blender-${{ matrix.blender-version }}.${{ matrix.blender-version-suffix }}-linux-x64.tar.xz
         cd ..
         ln -s ${PWD}/io_mesh_w3d ${PWD}/tmp/blender/${{ matrix.blender-version }}/scripts/addons/io_mesh_w3d
         wget https://files.pythonhosted.org/packages/85/d5/818d0e603685c4a613d56f065a721013e942088047ff1027a632948bdae6/coverage-4.5.4.tar.gz#md5=c33cab2aed8780aac32880cb6c7616b7
