--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,11 +15,8 @@ jobs:
     runs-on: [ ubuntu-latest ]
     strategy:
       matrix:
-        blender-version: ['2.83', '2.93' ]
+        blender-version: [ '2.93' ]
         include:
-          - blender-version: '2.83'
-            blender-version-suffix: '17'
-            python-version: '3.7'
           - blender-version: '2.93'
             blender-version-suffix: '4'
             python-version: '3.9.1'
