--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,6 +10,9 @@ jobs:
     runs-on: [ ubuntu-latest ]
 
     steps:
+    - uses: actions/checkout@v3
+      with:
+        submodules: 'true'
     - name: Bundle archive
       run: |
         zip -r io_mesh_w3d.zip io_mesh_w3d -x io_mesh_w3d/blender_addon_updater/.git
