--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,15 +15,15 @@ jobs:
     runs-on: [ ubuntu-latest ]
     strategy:
       matrix:
-        blender-version: [ '2.93', '3.4' ]
+        blender-version: [ '2.93', '3.6', '4.0' ]
         include:
           - blender-version: '2.93'
             blender-version-suffix: '13'
             python-version: '3.9.16'
-          - blender-version: '3.4'
+          - blender-version: '3.6'
             blender-version-suffix: '0'
             python-version: '3.10.9'
-          - blender-version: '3.5'
+          - blender-version: '4.0'
             blender-version-suffix: '0'
             python-version: '3.10.9'
 
